@startuml
title UML-діаграма прототипу програмних класів

hide circle
skinparam classAttributeIconSize 0

class Користувач {
  - id: INT
  - ім'я: String
  - вік: Integer
  - алергії: String
  - ціль: String
  + отримати_персоналізований_план(): ПланХарчування
  + передати_дані_про_здоров'я(): ДаніПроЗдоров'я
  + отримати_оцінку_самоповаги(): Float
  + отримати_досягнення(): List<Досягнення>
}

class ДаніПроЗдоров'я {
  - id: INT
  - користувач_id: INT
  - вага: Float
  - зріст: Integer
  - індекс_маси_тіла: Float
  - рівень_активності: String
  - дієтичні_обмеження: String
  + аналізувати_дані(): void
  + валідувати_дані(): boolean
}

class ПланХарчування {
  - id: INT
  - користувач_id: INT
  - сніданок: String
  - обід: String
  - вечеря: String
  - калорійність: Integer
  + генерувати_план(): void
  + надати_план(): void
  + оновити_план(): void
}

class Рекомендації {
  - id: INT
  - план_id: INT
  - обсяг_води_на_день: Float
  - фізична_активність: String
  + генерувати_рекомендації(): void
  + надати_рекомендації(): void
}

class Досягнення {
  - id: INT
  - користувач_id: INT
  - кількість_тренувань: Integer
  - виконані_вправи: String
  - нагороди: String
  + оновити_досягнення(): void
  + відобразити_досягнення(): void
}

class Самоповага {
  - id: INT
  - користувач_id: INT
  - рівень: Float
  - впевненість: String
  + аналізувати_досягнення(): void
  + оцінити_рівень(): Float
  + надати_оцінку(): void
}

class ТанцювальніПодії {
  - id: INT
  - користувач_id: INT
  - назва: String
  - тип_танцю: String
  - дата_проведення: Date
  - місце_проведення: String
  + отримати_події(): List<ТанцювальніПодії>
  + створити_подію(): void
}

class ХарчовийСервіс {
  + аналізувати_дані_про_здоров'я(дані: ДаніПроЗдоров'я): void
  + формувати_персоналізований_план(користувач: Користувач): ПланХарчування
}

class СамоповагаСервіс {
  + аналізувати_досягнення(досягнення: List<Досягнення>): void
  + оцінити_рівень_самоповаги(користувач: Користувач): Float
}

class КонтролерКористувача {
  + отримати_план_харчування(користувач_id: INT): ПланХарчування
  + передати_дані_про_здоров'я(дані: ДаніПроЗдоров'я): void
  + отримати_оцінку_самоповаги(користувач_id: INT): Float
}

"Користувач" ||--|| "ДаніПроЗдоров'я" : має
"Користувач" ||--|| "ПланХарчування" : отримує
"Користувач" ||--o{ "Досягнення" : має
"Користувач" ||--|| "Самоповага" : отримує
"Користувач" ||--o{ "ТанцювальніПодії" : має
"ПланХарчування" ||--o{ "Рекомендації" : містить
"Користувач" }--|| "ХарчовийСервіс" : використовує
"Користувач" }--|| "СамоповагаСервіс" : використовує
"Користувач" }--|| "КонтролерКористувача" : взаємодіє
"ХарчовийСервіс" ..|> "Рекомендації" : створює
"СамоповагаСервіс" ..|> "Самоповага" : оновлює

@enduml
